--- a/erlis_kendezi/index.html
+++ b/erlis_kendezi/index.html
@@ -35,6 +35,21 @@
                     </tr>
                 </tbody>
             </table>
+            <h2>Delivery Methods & Timescales</h2>
+            <table border="2">
+                <thead>
+                    <th>Courier</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            DHL<br>
+                            <img src="" alt="dhl logo"><br>
+                            <a href="#">DHL Delivery</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <script src="script.js"></script>
     </body>
