--- a/GREISI-PROJECT/index.html
+++ b/GREISI-PROJECT/index.html
@@ -14,7 +14,7 @@
     <div class="navbar">
 
         <div class="logo">
-            <img id="logo1" src="C:\Users\greis\OneDrive\Desktop\WEB_PROJECT1\groceries.png" alt="Logo of gorceryShop">
+            <img id="logo1" src="groceries.png" alt="Logo of gorceryShop">
             <h4 id="nameofshop">GroceryMania</h4>
         </div>
 
