--- a/WEB_PROJECT1/ABOUT/about.html
+++ b/WEB_PROJECT1/ABOUT/about.html
@@ -13,7 +13,7 @@
         <div class="navbar">
     
             <div class="logo">
-                <img id="logo1" src="groceries.png" alt="Logo of gorceryShop">
+                <img id="logo1" src="../IMAGES/groceries.png" alt="Logo of gorceryShop">
                 <h4 id="nameofshop">GroceryMania</h4>
             </div>
     
@@ -47,7 +47,7 @@
                 <br>
                 <br>
                 <br> 
-                <img src="groc1.jpg" style="width: 50em; height: 30em; margin-left: 25em; ">
+                <img src="../IMAGES/groc1.jpg" style="width: 50em; height: 30em; margin-left: 25em; ">
                 <br>
                 <br>
 
