--- a/WEB_PROJECT1/HOME/index.html
+++ b/WEB_PROJECT1/HOME/index.html
@@ -14,7 +14,7 @@
     <div class="navbar">
 
         <div class="logo">
-            <img id="logo1" src="groceries.png" alt="Logo of gorceryShop">
+            <img id="logo1" src="../IMAGES/groceries.png" alt="Logo of gorceryShop">
             <h4 id="nameofshop">GroceryMania</h4>
         </div>
 
@@ -46,7 +46,7 @@
     <div class="container">
 
         <div class="Veggies">
-            <img  id="picture-veggies"src="Backgr-vegetables.jpg" style="width: 1450px; height: 700px; margin-left: 82.5px; opacity:0.3;">
+            <img  id="picture-veggies"src="../IMAGES/Backgr-vegetables.jpg" style="width: 1450px; height: 700px; margin-left: 82.5px; opacity:0.3;">
             <a id="prev" onclick="plusSlides(-1)" style="position: absolute; top: 48%; left: 50px; transform: translateY(-50%); background-color:  #e4decc; color:#ffffff; font-size: 60px">❮</a>
             <a id="next" onclick="plusSlides(1)" style="position: absolute; top: 48%; right: 50px; transform: translateY(-50%); background-color:  #e8e3d7;  color:#ffffff;font-size: 60px">❯</a>
             <h1  style="position: absolute;top:20% ;left:450px;font-size:60px;font-family: 'Times New Roman';font-weight:bold;background-color: transparent;color: #946666;text-shadow: 2px 2px 2px rgba(0,0,0,0.5);">Trip to the groceryShop!</h1>
