--- a/WEB_PROJECT1/Delivery.html
+++ b/WEB_PROJECT1/Delivery.html
@@ -1,13 +1,13 @@
 <html>
     <head>
         <title>GroceryShop</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../WEB_PROJECT1/HOME/style.css">
     </head>
     <body> 
         <div class="navbar">
 
             <div class="logo">
-                <img id="logo1" src="groceries.png" alt="Logo of gorceryShop">
+                <img id="logo1" src="../WEB_PROJECT1/IMAGES/groceries.png" alt="Logo of gorceryShop">
                 <h4 id="nameofshop">GroceryMania</h4>
             </div>
 
